# happenings

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  happenings.db  pyproject.toml
.github/workflows/: test.yml
src/happenings/: __init__.py  cli.py  main.py
src/happenings/application/: AuthenticationService.py  UserManagementService.py  __init__.py
src/happenings/domain/user/: User.py  UserRepository.py  __init__.py
src/happenings/infrastructure/: config.py
src/happenings/infrastructure/persistence/: UserModel.py  __init__.py  base.py  database.py
src/happenings/presentation/: __init__.py  dependency_injection.py  events_router.py  user_router.py
tests/: test_main.py  test_user_router.py
