[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "happenings"
dynamic = ["version"]
description = 'An app to create and search for events in your neighborhood'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Pierre Thirouin", email = "pierre.thirouin@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Pierre Thirouin/happenings#readme"
Issues = "https://github.com/Pierre Thirouin/happenings/issues"
Source = "https://github.com/Pierre Thirouin/happenings"

[tool.hatch.version]
path = "src/happenings/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/happenings tests}"

[tool.coverage.run]
source_pkgs = ["happenings", "tests"]
branch = true
parallel = true
omit = [
  "src/happenings/__about__.py",
]

[tool.coverage.paths]
happenings = ["src/happenings", "*/happenings/src/happenings"]
tests = ["tests", "*/happenings/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
